FIX: better spacing when buttons wrap

--- a/perma_web/static/css/style-responsive.scss
+++ b/perma_web/static/css/style-responsive.scss
@@ -3967,7 +3967,8 @@ span.action {
   .sponsor-email,
   p {
     display: inline-block;
-    padding-right: 72px;
+    padding-right: 2px;
+    padding-bottom: 5px;
   }
   .btn-xs {
     padding: 4px 8px;
